# sd-jwt-rust

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md
.github/: settings.yml
.github/workflows/: rust.yml
generate/: Cargo.toml  README.md  sd_jwt_python.patch
generate/src/: error.rs  main.rs
generate/src/types/: cli.rs  mod.rs  settings.rs  specification.rs
generate/src/utils/: funcs.rs  generate.rs  mod.rs
src/: crypto_provider.rs  disclosure.rs  error.rs  holder.rs  issuer.rs  lib.rs  utils.rs  verifier.rs
tests/: demos.rs
tests/utils/: fixtures.rs  mod.rs
