[package]
name = "sd-jwt-rs"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rust reference implementation of the IETF SD-JWT specification (v6)."
rust-version = "1.74.0"
authors = ["Sergey Minaev <sergey.minaev@dsr-corporation.com>"]
repository = "https://github.com/openwallet-foundation-labs/sd-jwt-rust"
homepage = "https://github.com/openwallet-foundation-labs/sd-jwt-rust"

[dependencies]
base64 = "0.21"
hmac = "0.12"
jsonwebtoken = "9.2"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0.51"
strum = { version = "0.25", default-features = false, features = ["std", "derive"] }

[dev-dependencies]
rstest = "0.18.2"
regex = "1.10"
