[package]
name = "sd-jwt-rs"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rust reference implementation of the IETF SD-JWT specification (v7)."
rust-version = "1.67.0"
authors = ["Sergey Minaev <sergey.minaev@dsr-corporation.com>"]
repository = "https://github.com/openwallet-foundation-labs/sd-jwt-rust"
documentation = "https://docs.rs/sd-jwt-rs"
homepage = "https://github.com/openwallet-foundation-labs/sd-jwt-rust"

[features]
mock_salts = ["lazy_static"]

[dependencies]
base64 = "0.21"
hmac = "0.12"
jsonwebtoken = "9.2"
lazy_static = {  version = "1.4", optional = true }
log = "0.4"
rand = "0.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "1.0.51"
strum = { version = "0.25", default-features = false, features = ["std", "derive"] }

[dev-dependencies]
rstest = "0.18.2"
regex = "1.10"
