[package]
name = "sd-jwt-generate"
version = "0.1.0"
edition = "2021"
authors = ["Abdulbois Tursunov <abdulbois.tursunov@dsr-corporation.com>", "Alexander Sukhachev <alexander.sukhachev@dsr-corporation.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = { version = "1.0.113", features = ["preserve_order"] }
jsonwebtoken = "9.1"
sd-jwt-rs = {path = "./..", features = ["mock_salts"]}